--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
-You know how to
+You know how to ;)
+
+First commit:
+
+Demo videos and uploads folder not present here
+change your db password
+change images to kyc_docs in upload_docs
+
